# thread-pool-and-threadsafe-map

./: .gitignore  CMakeLists.txt  README.md  THREADSAFE_MAP.md  THREAD_POOL.md  auto_runner.py  compile.sh
include/: CrossType.h  FunctionWrapper.h  JoinThreads.h  StaticThreadPool.h  StaticThreadPoolUsingPosixApi.h  StaticThreadPoolUsingWinApi.h  StaticThreadPoolWithLocalQueue.h  StaticThreadPoolWithWorkStealing.h  ThreadSafeMap.h  ThreadSafeQueue.h  Utils.h  WorkStealingQueue.h
misc/: runner.py  visualizer.py
src/: Main.cpp  TestThreadPool.cpp  TestThreadSafeMap.cpp
